--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: Time Machine theme
+title: Sarath Kumar
 description: Time Machine is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
