--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,6 @@ description: Time Machine is a theme for GitHub Pages.
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-time-machine
+remote_theme: pages-themes/time-machine@v0.2.0
+plugins:
+- jekyll-remote-theme
